[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psstree"
version = "0.5.1"
description = "list process' PSS sorted descendingly within their parent-child hierarchy. can also do same for disk-space usage"
authors = [{name="Anosrep Enilno"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.1.1",
    "psutil>=7.2.2",
]

[project.urls]
Repository = "https://github.com/anosrepenilno/psstree"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
psstree = "psstree.cli:main"
